[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webserver"
version = "0.1.0"
authors = [
  { name="Nikolaos Chatzikonstantinou", email="nchatz314@gmail.com" },
]
description = "Example NGINX-Unit web server using litestar and PostgreSQL"
readme = "README.txt"
license = {file = "COPYING"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "litestar[standard, sqlalchemy]",
    "psycopg",
]

# [project.urls]
# Homepage = "https://github.com/..."
# Issues = "https://github.com/..."

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
